# legal-pedagogy

./: .gitignore  CLAUDE.md  README.md  Snakefile  clean_extracted_args.py  cleaned_arguments.json  config.yaml  design.md  final_comparison.py  pixi.toml  pyproject.toml  test_new_parsing.py
.zetteldev/: build-index.js  check-total-staged-size.sh  create_experiment.py  new_git_worktree.sh  provision_vercel.sh  run_experiment.py  sync_cloud_data.py
data/: sample_data.json
experiments/minimum-viable/: Snakefile  generate_figures.py  main.py  report.qmd  simple_models.py
experiments/minimum-viable/figures/: character_belief_statistics.csv  model_performance_summary.csv
experiments/minimum-viable/processed_data/: appellant_response.txt  belief_distributions.csv  belief_distributions.parquet  character_questions.json  extracted_arguments.json  judge_response.txt  test_belief_distributions.json  test_extracted_arguments.json
experiments/minimum-viable/processed_data/character_test_logs/: judge_queries_20250813_134550.json  judge_queries_20250813_135336.json  judge_queries_20250813_140454.json  judge_queries_20250813_141028.json  judge_queries_20250813_141951.json  judge_queries_20250813_142834.json
experiments/minimum-viable/processed_data/judge1_logs/: judge_queries_20250813_134550.json  judge_queries_20250813_135336.json  judge_queries_20250813_140454.json  judge_queries_20250813_141028.json  judge_queries_20250813_141951.json  judge_queries_20250813_142833.json
experiments/minimum-viable/processed_data/judge2_logs/: judge_queries_20250813_134550.json  judge_queries_20250813_135336.json  judge_queries_20250813_140454.json  judge_queries_20250813_141028.json  judge_queries_20250813_141951.json  judge_queries_20250813_142833.json
experiments/minimum-viable/tests/: test_api.py
pedadog/: __init__.py  ai_sandbox.py  api.py  case_beliefs.py  character_beliefs.py  config.yaml  generate_belief_vector.py  make_character_questions.py  models.py  thermometer.py
